--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Historia de Lautaro - Futuro Programador</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Open Sans', sans-serif;
             background: linear-gradient(135deg, #ff6a00, #ffcc00);
             color: #fff;
             margin: 0;
@@ -16,7 +17,7 @@
 
         h1, h2, h3 {
             text-align: center;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Poppins', sans-serif;
             text-transform: uppercase;
             animation: slideIn 2s ease-out;
             color: #fff;
@@ -63,7 +64,7 @@
             font-size: 18px;
             line-height: 1.6;
             text-align: justify;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Open Sans', sans-serif;
             color: #ecf0f1;
             animation: fadeIn 3s ease-in-out;
         }
@@ -75,7 +76,7 @@
 
         .quote {
             font-style: italic;
-            color: #f1c40f;
+            color: #fffb00;
             font-size: 22px;
             text-align: center;
             margin-top: 20px;
@@ -137,7 +138,7 @@
 
     <div class="header">
         <h1>La Historia de Lautaro</h1>
-        <h2>De un chico con sueños grandes a futuro programador profesional</h2>
+        <h2>De un chico con sueños grandes a futuro programador</h2>
     </div>
 
     <div class="section">
@@ -180,48 +181,34 @@
     </div>
 
     <div class="section">
-        <h3>La Relación con Su Papá y Problemas de Socialización</h3>
+        <h3>El Reto de Linux</h3>
         <p class="story-text">
-            A pesar de su amor por la tecnología, Lautaro también enfrentaba otros retos en su vida personal. Su papá no estaba de acuerdo con que pasara tanto tiempo frente a la computadora. En muchas ocasiones, se enojaba con él, le decía que iba a tirar la computadora y lo sacaba de su habitación. Lautaro sentía que esto lo limitaba, pero no dejó que esa situación lo desmotivara.
+            A lo largo de su viaje, Lautaro se encontró con una nueva barrera: Linux. Aunque estaba decidido a aprender más sobre este sistema operativo, la instalación fue un verdadero desafío. Tuvo que investigar mucho, lidiar con varios errores y buscar soluciones en foros hasta lograr instalarlo correctamente. 
         </p>
         <p class="story-text">
-            Además, Lautaro tenía problemas para socializar. La ansiedad y el miedo a interactuar con otras personas lo hacían sentirse incómodo en situaciones sociales. No sabía cómo romper el hielo con los demás, y se sentía aislado en muchas ocasiones. Sin embargo, con el tiempo, se dio cuenta de que estos problemas no definían su futuro. Decidió trabajar en sí mismo, buscando formas de mejorar su comunicación y fortalecer su confianza.
-        </p>
-        <p class="story-text">
-            A pesar de las dificultades, Lautaro siguió adelante. Aprendió que los problemas de socialización y ansiedad no eran obstáculos insuperables. Poco a poco, comenzó a sentirse más cómodo en las interacciones y mejoró su capacidad para expresarse. Esto le permitió no solo avanzar en su desarrollo personal, sino también en su carrera como programador.
+            A pesar de las dificultades, Lautaro no se dio por vencido. Su pasión por la informática lo llevó a superar estos obstáculos y seguir adelante. La experiencia con Linux le enseñó a ser más resiliente y a no temerle a los errores, ya que cada uno de ellos lo acercaba más a su meta.
         </p>
     </div>
 
     <div class="section">
-        <h3>El Camino de Linux</h3>
+        <h3>Superando Obstáculos Personales</h3>
         <p class="story-text">
-            Lautaro, siempre en busca de nuevos conocimientos, decidió dar el siguiente paso: instalar Linux, un sistema operativo que muchos programadores usan debido a su flexibilidad y potencia. Sin embargo, instalar Linux no fue tarea fácil. Pasó horas, incluso días, intentando hacerlo funcionar. A cada paso, se encontraba con errores que no sabía cómo solucionar, lo que lo llevó a cuestionar si estaba tomando la decisión correcta.
+            Además de los desafíos técnicos, Lautaro también enfrentó dificultades en su vida personal. Su papá no estaba contento con que pasara tanto tiempo frente a la computadora. A menudo le decía que le tiraría la computadora y le pedía que se concentrara en otras actividades. Esto provocaba tensiones en su hogar, pero Lautaro nunca dejó que eso lo detuviera.
         </p>
         <p class="story-text">
-            Pero Lautaro, con la persistencia que lo caracteriza, no se rindió. Después de mucho esfuerzo y pruebas, finalmente logró instalar Linux y comenzar a trabajar con este sistema. Este fue un hito importante en su viaje, ya que le permitió tener un control total sobre su entorno de trabajo y comenzó a sentirse más cómodo programando.
+            Además, Lautaro tenía problemas para socializar. La ansiedad social y la timidez lo hacían sentirse incómodo en situaciones con otras personas. Sin embargo, con el tiempo, Lautaro comenzó a trabajar en su capacidad para relacionarse y superar estos miedos. Cada paso que daba le ayudaba a ser más fuerte y más seguro de sí mismo.
         </p>
     </div>
-
     <div class="section">
         <h3>El Sueño de un Futuro Brillante</h3>
         <p class="story-text">
             Hoy en día, Lautaro sigue persiguiendo su sueño: convertirse en un programador profesional. Aunque el camino aún está lleno de desafíos, él está más decidido que nunca a alcanzarlo. Su objetivo es crear páginas web innovadoras y videojuegos que puedan sorprender al mundo. Sabe que se necesita mucho trabajo y dedicación para llegar a ser un experto, pero su pasión por la programación lo impulsa a seguir adelante, incluso en los momentos más difíciles.
         </p>
         <p class="story-text">
-            Lautaro está convencido de que, con el tiempo, logrará dominar las herramientas necesarias
-        </p>
-        <p class="story-text">
             Lautaro está convencido de que, con el tiempo, logrará dominar las herramientas necesarias para ser un profesional de la programación. Su sueño sigue vivo, y cada día se acerca más a la meta de convertirse en un experto en la creación de videojuegos y páginas web. A pesar de los obstáculos, su determinación y esfuerzo lo han mantenido en el camino.
         </p>
-        <div class="quote">
-            <p>"Nunca te rindas, el éxito está más cerca de lo que piensas." - Lautaro</p>
-        </div>
-    <script>
-        let footer = document.querySelector('.footer');
-        function toggleFooter() {
-            footer.classList.toggle('footer-hidden');
-        }
-    </script>
-
+    <div class="quote">
+        <p>"Nunca te rindas, el éxito está más cerca de lo que piensas." - Lautaro</p>
+    </div>
 </body>
 </html>
