--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div class="section">
         <h3>Superando Obstáculos Personales</h3>
         <p class="story-text">
-            Además de los desafíos técnicos, Lautaro también enfrentó dificultades en su vida personal. Su papá no estaba contento con que pasara tanto tiempo frente a la computadora. A menudo le decía que le tiraría la computadora y le pedía que se concentrara en otras actividades. Esto provocaba tensiones en su hogar, pero Lautaro nunca dejó que eso lo detuviera.
+            Además de los desafíos técnicos, Lautaro también enfrentó dificultades en su vida personal. Como que sus papás estaban separados y su papá no estaba contento con que pasara tanto tiempo frente a la computadora. A menudo le decía que le tiraría la computadora aunque el papá le había regalado la computadora y le pedía que se concentrara en otras actividades. Esto provocaba tensiones en su hogar, pero Lautaro nunca dejó que eso lo detuviera.
         </p>
         <p class="story-text">
             Además, Lautaro tenía problemas para socializar. La ansiedad social y la timidez lo hacían sentirse incómodo en situaciones con otras personas. Sin embargo, con el tiempo, Lautaro comenzó a trabajar en su capacidad para relacionarse y superar estos miedos. Cada paso que daba le ayudaba a ser más fuerte y más seguro de sí mismo.
